[gd_scene load_steps=17 format=3 uid="uid://b18a8sg7wdjls"]

[ext_resource type="Script" path="res://Scenes/Battle/battle.gd" id="1_6f2ov"]
[ext_resource type="Texture2D" uid="uid://cp4iq5fd6j8be" path="res://art/background.png" id="1_novpl"]
[ext_resource type="PackedScene" uid="uid://dahflqq52vdcs" path="res://Scenes/enemy/enemy.tscn" id="2_6us7v"]
[ext_resource type="Script" path="res://Scenes/ui/Hand.gd" id="2_qainr"]
[ext_resource type="PackedScene" uid="uid://ml4feb48whv0" path="res://Scenes/player/player.tscn" id="3_1qvg3"]
[ext_resource type="PackedScene" uid="uid://dm78wqj1pk806" path="res://Scenes/card_target_selector/card_target_selector.tscn" id="3_f602p"]
[ext_resource type="Resource" uid="uid://c7377h3k74di5" path="res://characters/warrior/warrior.tres" id="4_1s5hy"]
[ext_resource type="Script" path="res://Scenes/enemy/enemy_handler.gd" id="4_wyp3n"]
[ext_resource type="Resource" uid="uid://dt6j15f561aef" path="res://enemies/crab/crab_enemy.tres" id="5_kbg0e"]
[ext_resource type="Script" path="res://Scenes/ui/battle_ui.gd" id="6_hmtni"]
[ext_resource type="Script" path="res://Scenes/player/Player_Handler.gd" id="7_esral"]
[ext_resource type="PackedScene" uid="uid://b14utisb2h2ok" path="res://Scenes/Card_Ui/energy_ui.tscn" id="11_7aeg5"]
[ext_resource type="PackedScene" uid="uid://dhwi08u42ms74" path="res://Scenes/ui/tooltip.tscn" id="12_1cn3e"]
[ext_resource type="Theme" uid="uid://bhwmfnyyieplb" path="res://main_theme.tres" id="12_kww7l"]
[ext_resource type="Script" path="res://Scenes/ui/player_damage_flash.gd" id="15_5awil"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cialh"]
size = Vector2(256, 100)

[node name="Battle" type="Node2D"]
script = ExtResource("1_6f2ov")
character_stats = ExtResource("4_1s5hy")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.332881, 0.332881, 0.332881, 1)
texture = ExtResource("1_novpl")
centered = false
metadata/_edit_lock_ = true

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(128, 50)
shape = SubResource("RectangleShape2D_cialh")
debug_color = Color(0, 0.6, 0.701961, 0.129412)
metadata/_edit_lock_ = true

[node name="EnemyHandler" type="Node2D" parent="."]
script = ExtResource("4_wyp3n")

[node name="Enemy" parent="EnemyHandler" instance=ExtResource("2_6us7v")]
position = Vector2(195, 71)
stats = ExtResource("5_kbg0e")

[node name="Player" parent="." instance=ExtResource("3_1qvg3")]
position = Vector2(58, 71)
character_stats = ExtResource("4_1s5hy")

[node name="CardTargetSelector" parent="." instance=ExtResource("3_f602p")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("7_esral")
hand = NodePath("../BattleUI/Hand")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("6_hmtni")

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -31.0
offset_right = 75.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("2_qainr")
character_stats = ExtResource("4_1s5hy")

[node name="EnergyUI" parent="BattleUI" instance=ExtResource("11_7aeg5")]
offset_left = 7.0
offset_right = 25.0
character_stats = ExtResource("4_1s5hy")

[node name="Tooltip" parent="BattleUI" instance=ExtResource("12_1cn3e")]
offset_top = 3.0
offset_bottom = 39.0

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -21.0
offset_right = -4.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("12_kww7l")
text = "End Turn"
metadata/_edit_use_anchors_ = true

[node name="debug_draw_pile_total" type="Label" parent="BattleUI"]
unique_name_in_owner = true
visible = false
offset_left = 216.0
offset_top = 99.0
offset_right = 256.0
offset_bottom = 122.0
theme = ExtResource("12_kww7l")
text = "deck"

[node name="debug_discard_total" type="Label" parent="BattleUI"]
unique_name_in_owner = true
visible = false
offset_left = 217.0
offset_top = 110.0
offset_right = 274.0
offset_bottom = 133.0
theme = ExtResource("12_kww7l")
text = "discard"

[node name="PlayerDamageFlash" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("15_5awil")

[node name="ColorRect" type="ColorRect" parent="PlayerDamageFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.811765, 0, 0.14902, 0)

[node name="Timer" type="Timer" parent="PlayerDamageFlash"]
wait_time = 0.15
one_shot = true

[connection signal="child_order_changed" from="EnemyHandler" to="." method="_on_enemy_handler_child_order_changed"]
